--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -8,6 +8,8 @@ body, input{
 .container {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
   /* border: 1px solid red; */
 }
@@ -35,7 +37,7 @@ body, input{
 }
 
 .input-text {
-  padding: 6px;
+  padding: 10px 6px;
   outline: none;
   background: #eceff1;
   border: 1px solid #ECECEC;
@@ -61,9 +63,17 @@ body, input{
   padding: 10px;
   cursor: pointer;
   border-radius: 6px;
+  width: 100px;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
 .input-button:hover {
-  font-weight: 600;
-  border-color: #8C8C8C;
+  border-color: #E6E6E6;
+  background: #F2F2F2;
+}
+
+.simple-text {
+  font-size: 14px;
+  margin-top: 10px;
 }
