--- a/web/src/public/styles.css
+++ b/web/src/public/styles.css
@@ -1,79 +1,135 @@
 body {
-  background-color: #f2f2f2;
+    max-width: 9999px;
+    background-color: #f2f2f2;
 }
-body, input{
-  font-family: 'Roboto' !important;
+
+body,
+input {
+    font-family: 'Roboto' !important;
 }
 
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  /* border: 1px solid red; */
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.container-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 320px;
+    /* border: 1px solid red; */
+}
+
+.content-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 320px;
+    max-width: 360px;
+    padding: 20px;
+    overflow: auto;
+}
+
+.container-users {
+    display: flex;
+    justify-content: center;
+    /* border: 1px solid red; */
 }
 
 .card {
-  margin-top: 30px;
-  width: 400px;
-  border: 1px solid #CECECE;
-  border-radius: 6px;
-  background: #FEFEFE;
+    margin-top: 30px;
+    border: 1px solid #CECECE;
+    border-radius: 6px;
+    background: #FEFEFE;
 }
 
 .header-text {
-  display: flex;
-  justify-content: center;
-  font-size: 20px;
-  font-weight: 600;
-  padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 600;
+    padding-top: 10px;
 }
 
 .card-content {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .input-text {
-  padding: 10px 6px;
-  outline: none;
-  background: #eceff1;
-  border: 1px solid #ECECEC;
-  margin: 5px;
-  border-radius: 6px;
+    padding: 10px 6px;
+    outline: none;
+    background: #eceff1;
+    border: 1px solid #ECECEC;
+    margin: 5px;
+    border-radius: 6px;
 }
 
 .input-text:hover {
-  border-color: #E6E6E6;
+    border-color: #E6E6E6;
 }
 
 .container-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
 
 .input-button {
-  border: 1px solid #CECECE;
-  background: #FEFEFE;
-  outline: none;
-  padding: 10px;
-  cursor: pointer;
-  border-radius: 6px;
-  width: 100px;
-  text-transform: uppercase;
-  font-weight: 600;
+    border: 1px solid #CECECE;
+    background: #FEFEFE;
+    outline: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 6px;
+    width: 100px;
+    text-transform: uppercase;
+    font-weight: 600;
 }
 
 .input-button:hover {
-  border-color: #E6E6E6;
-  background: #F2F2F2;
+    border-color: #E6E6E6;
+    background: #F2F2F2;
 }
 
 .simple-text {
-  font-size: 14px;
-  margin-top: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+table,
+tr,
+td,
+th {
+    border-collapse: collapse;
+    border: 1px solid #B9B7BD;
+    word-break: break-all;
+}
+
+td,
+th {
+    min-width: 45px;
+}
+
+.center-tag {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+tr:nth-child(even) {
+    background-color: #EEEDE7;
+}
+
+td {
+    padding: 5px;
+}
+
+.container-table {
+    padding: 15px;
+    overflow: auto;
 }
